fixing bug on mobile

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -22,7 +22,7 @@
         justify-content: space-between;
 
         @include respond-to-orientation(portrait) {
-            height: 65vh;
+            height: 55vh;
         }
 
         @include md{
@@ -122,7 +122,6 @@
     .background-1 {
         align-self: center;
         z-index: 0;
-        border: 1px solid blue;
         top: toRem(400);
         width: 60%;
 
